--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@ a {
     text-decoration: none;
   }
 }
+
 ul {
   list-style: none;
   -webkit-margin-before: 1em;
@@ -34,6 +35,8 @@ ul {
   border-radius: 4px;
   box-shadow: 5px 7px 17px rgba(0,0,0,0.17);
 }
+
+/* Index **********************************************************************/
 
 .no-car {
   text-align: center;
@@ -57,7 +60,6 @@ ul {
   width: 100%;
   height: 176px;
   background-size: cover;
-  opacity: 0.5;
 }
 
 .logo {
@@ -131,4 +133,102 @@ ul {
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+/* Show ***********************************************************************/
+
+.car-container {
+  width: calc(100% - 220px);
+  height: 100%;
+  background: #dbdbdb;
+  overflow: scroll;
+}
+
+.car-card {
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin: 10px;
+  background: white;
+}
+
+.car-picture {
+  width: 220px;
+  height: 220px;
+}
+
+.car-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.plate {
+  margin-top: 10px;
+  width: 195px;
+  padding: 10px 22px;
+  font-size: 21px;
+  text-align: center;
+  border: 1px solid black;
+}
+
+.delete {
+  position: absolute;
+  width: 120px;
+  bottom: 0;
+  right: 0;
+}
+
+.delete > i {
+  margin-right: 10px;
+}
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: calc(100% - 220px);
+  height: 100%;
+  background-color: #dbdbdb;
+  background-size: cover;
+  background-position: center center;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  opacity: 0.6;
+  z-index: 1;
+}
+
+form {
+  position: relative;
+  background: white;
+  padding: 20px;
+  width: 420px;
+  z-index: 2;
+}
+
+label {
+  font-weight: 600;
+}
+
+button {
+  padding: 10px 17px;
+  margin-left: -2px;
+  border-radius: 0 2px 2px 0;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+  border: none;
+  background-color: #D23333;
+  color: white;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
 }
